// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileU
        tileName="lead"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="support"
      />
    </View>
  </View>
</View>
`;

exports[`2. lead one full width tablet slice 1`] = `
<View>
  <TileR
    tileName="lead"
  />
</View>
`;

exports[`3. secondary four tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileC
        tileName="secondary1"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary2"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary3"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary4"
      />
    </View>
  </View>
</View>
`;

exports[`4. secondary two and two slice 1`] = `
<View>
  <View>
    <View>
      <View>
        <TileV
          tileName="secondary1"
        />
      </View>
      <View />
      <View>
        <TileV
          tileName="secondary2"
        />
      </View>
    </View>
    <View />
    <View>
      <View>
        <TileG
          tileName="support1"
        />
      </View>
      <View />
      <View>
        <TileG
          tileName="support2"
        />
      </View>
    </View>
  </View>
</View>
`;
